---------------------------------------------------------------------------------------------------
Version: 0.16.12
Date: 09. 08. 2018
  Bugfixes:
    - Fixed that ghost trains could be force-built on top of existing trains.
---------------------------------------------------------------------------------------------------
Version: 0.16.11
Date: 08. 08. 2018
  Bugfixes:
    - Fixed ghost trains being canceled when a player stands on top of them.
    - Fixed loss of train schedule if train is built in the wrong order.
---------------------------------------------------------------------------------------------------
Version: 0.16.10
Date: 08. 08. 2018
  Bugfixes:
    - Fixed on_configuration_changed error.
---------------------------------------------------------------------------------------------------
Version: 0.16.9
Date: 08. 08. 2018
  Changes:
    - Changed internal train_id system. Blueprints containing more than 1 train should be remade.
---------------------------------------------------------------------------------------------------
Version: 0.16.8
Date: 07. 08. 2018
  Features:
    - Locomotives request a stack of fuel when the train is complete.
    - Shift-click to create ghost trains.
  Changes:
    - Automatic mode is not enabled until every locomotive has fuel.
  Bugfixes:
    - High-res ghosts are now transparent.
---------------------------------------------------------------------------------------------------
Version: 0.16.7
Date: 06. 08. 2018
  Features:
    - Locomotive schedule and color.
    - Cargo wagon filters.
    - Automatic mode.
    - Press the mod button to stop adding trains to new blueprints. Existing blueprints with trains still work.